--- a/en/a/antinomianism.801172.wikitext
+++ b/en/a/antinomianism.801172.wikitext
@@ -11,17 +11,18 @@ From {{suffix|en|antinomian|ism}}, coined by {{w|Martin Luther}}, notably used i
 ===Noun===
 {{en-noun|~}}
 
-# {{lb|en|Christianity}} The belief or teaching that because only the spiritual 'law of Faith' (Romans 3:27) is essential for salvation, obedience to any practical or moral law has no role to play, not even as a guide to conduct or as a test of the genuineness of faith.
+# {{lb|en|Christianity}} The belief or teaching that because only the spiritual "law of faith" (Romans 3:27) is essential for salvation, obedience to any practical or moral law has no role to play, even as a guide to conduct or as a test of the genuineness of faith.
 #: {{ant|en|legalism}}
 #* {{quote-book|en|title=Lipstick Traces|chapter=The Assault on Notre-Dame|author={{w|Greil Marcus}}|year_published=2009|year=1989|publisher=Faber & Faber|passage=Always containing seeds of '''antinomianism''', mysticism inevitably undermined that authority, but because the church's hegemony rested on mystery, mysticism could not altogether be prohibited. The common will to reach God was too strong, and the church was political before it was anything else.}}
 # {{lb|en|Judaism}} Opposition to the [[Torah]].
 
 ====Translations====
-{{trans-top|a religious belief or teaching that the spiritual law of faith renders any practical or moral law irrelevant}}
+{{trans-top|a belief or teaching that the spiritual law of faith renders any practical or moral law irrelevant}}
 * German: {{t+|de|Antinomismus|m}}
 * Polish: {{t|pl|antynomizm}}
 {{trans-mid}}
 * Portuguese: {{t|pt|antinomianismo|m}}, {{t|pt|antinomismo|m}}
+* Spanish: {{t|es|antinomismo|m}}, {{t|es|antinomianismo|m}}
 {{trans-bottom}}
 
 ====See also====
