--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -126,7 +126,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Breton: {{t+|br|pouez|m}}
 * Bulgarian: {{t+|bg|тегло́|n|sc=Cyrl}}
 * Burmese: {{t+|my|အလေး|sc=Mymr}}
-* Catalan: {{l|ca|pes}}
+* Catalan: {{t|ca|pes}}
 * Central Melanau: {{t|mel|baat}}
 * Chinese:
 *: Mandarin: {{t+|cmn|重量|tr=zhòngliàng|sc=Hani}}, {{qualifier|body weight}} {{t+|cmn|體重|sc=Hani}}, {{t+|cmn|体重|tr=tǐzhòng|sc=Hani}}
