--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -173,7 +173,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * Georgian: {{t|ka|წილადი}}
 * German: {{t+|de|Bruch|m}}
 * Greek: {{t+|el|κλάσμα|n}}
-*: Ancient: {{t+|el|κλάσμα|n}}, {{t|grc|μόριον|n}}
+*: Ancient: {{t|grc|κλάσμα|n}}, {{t|grc|μόριον|n}}
 * Greenlandic: {{t|kl|brøki}}
 * Hindi: {{t+|hi|भिन्न|m}}
 * Hungarian: {{t+|hu|tört}}, {{t+|hu|törtszám}}
