--- a/en/p/Pax Americana.855982.wikitext
+++ b/en/p/Pax Americana.855982.wikitext
@@ -2,12 +2,13 @@
 {{wikipedia}}
 
 ===Etymology===
-Latin. By analogy with {{m|en|Pax Romana}}.
+{{bor|en|la|-}}, {{lit|American Peace|nocap=1}}, by analogy with {{m|en|Pax Romana}}.
 
 ===Proper noun===
 {{en-proper noun}}
 
-# {{lb|en|historical}} The period of relative peace in the Western world since the end of World War II in 1945, coinciding with the military and economic dominance of the United States.
+# {{lb|en|historical}} The period of relative peace in the Western world since the end of [[World War II]] in 1945, coinciding with the military and economic dominance of the [[United States]].
+#* {{quote-journal|en|author=David Leonhardt|title=Why Ukraine Is Different|work=The New York Times|date=2022-02-21|url=https://www.nytimes.com/2022/02/21/briefing/ukraine-russia-war-pax-americana.html|issn=0362-4331|passage=A war like this — a voluntary war of aggression — would be a sign that Putin believed that '''Pax Americana''' was over and that the U.S., the European Union and their allies had become too weak to exact painful consequences.}}
 
 ====Translations====
 {{trans-top}}
