--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -16,7 +16,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 {{wikipedia}}
 {{en-noun|~|s|ermine}}
 
-# A [[weasel]], ''[[Mustela erminea]]'', found in northern latitudes; its dark brown fur turns white in winter (apart from the black tip of the tail).
+# A [[weasel]] found in northern latitudes (''[[Mustela erminea]]'' in [[Eurasia]], [[Alaska]], and the [[Arctic]], ''[[Mustela richardsonii]]'' in the rest of [[North America]], ''[[Mustela haidarum]]'' in [[Haida Gwaii]]); its dark brown fur turns white in winter, apart from the black tip of the tail.
 # The white [[fur]] of this animal, traditionally seen as a [[symbol]] of [[purity]] and used for judges' robes.
 # {{lb|en|by extension|figuratively}} The [[office]] of a [[judge]].
 # {{lb|en|tincture}} A white [[field]] with black spots.
@@ -27,7 +27,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 * {{l|en|short-tailed weasel}} {{qualifier|American}}
 
 ====Translations====
-{{trans-top|''Mustela erminea''}}
+{{trans-top|''Mustela erminea'', ''M. richardsonii'', ''M. haidarum''}}
 * Albanian: {{t|sq|ermelina|?}}, {{t|sq|nuselalë e borës|f}}, {{t|sq|nuselalë bishtzezë|f}}
 * Arabic: {{t|ar|قَاقِم|m}}
 * Armenian: {{t+|hy|կնգում}}, {{t|hy|սպիտակ աքիս}}, {{t+|hy|ախազ}}
