--- a/en/p/partage.741229.wikitext
+++ b/en/p/partage.741229.wikitext
@@ -5,7 +5,8 @@
 From {{der|en|frm|partage}}, from {{m|frm|partir||to share}}.
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|en|/ˈpɑːtɪdʒ/}}
+* {{a|RP}} {{IPA|en|/ˈpɑːtɪdʒ/}}
+* {{a|GA}} {{IPA|en|/ˈpɑɹtɪdʒ/}}
 
 ===Noun===
 {{en-noun|~}}
