--- a/en/l/land yacht.803608.wikitext
+++ b/en/l/land yacht.803608.wikitext
@@ -1,7 +1,28 @@
 ==English==
 {{wikipedia}}
 
+===Alternative forms===
+* {{l|en|landyacht}}
+* {{l|en|land-yacht}}
+
 ===Noun===
 {{en-noun}}
 
 # A vehicle used in [[land sailing]], consisting of little more than of a [[carriage]] and a [[sail]].
+# {{lb|en|colloquial}} A [[long]], [[heavy]] [[automobile]], providing a comfortable ride but poor handling characteristics.
+#* {{quote-journal|en|author=Michael Lamm|title=Driving the '79 General Motors Cars|journal=Popular Mechanics|year=1978|month=October|text=For example, will the traditional Eldorado buyer willingly step from his 5052-pound, 19-foot-long 1978 '''land yacht''' into a 1979 version weighing 1155 pounds less and measuring nearly two feet shorter? Is he willing to pay the same or more cash for this smaller, lighter car?}}
+#* {{quote-book|en|author=Greta Olson|title=Criminals as Animals from Shakespeare to Lombroso|year=2013|text=A frequently cited example is a “'''land yacht'''” to describe an SUV: this blend creates a structure out of the ideas behind it, suggesting that the large car moves on the road like a yacht over water}}
+#* {{quote-book|en|author=Robert Lashley|title=The Mind Full|year=2017|text=She owned a '''land yacht''' of a car called a Chevrolet Monte Carlo. It had the softest suspension of any car he had ridden in.}}
+
+====Usage notes====
+* The automotive sense is most often, but not exclusively, applied to [[full-size]] [[sedan]]s and [[coupe]]s of the 1960s and 1970s.
+
+====Translations====
+{{trans-top|vehicle used in land sailing}}
+{{trans-mid}}
+{{trans-bottom}}
+{{trans-top|long, heavy automobile}}
+{{trans-mid}}
+{{trans-bottom}}
+
+[[Category:en:Automobiles]]
