--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -284,6 +284,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Pijin: {{t|pis|aelan}}
 * Pitcairn-Norfolk: {{t|pih|ailen}}
 * Plautdietsch: {{t|pdt|Insel|f}}
+* Poitevin-Saintongeais: {{t|roa-poi|ilâte|f}}
 * Polabian: {{t|pox|våstrüv|m}}
 * Polish: {{t+|pl|wyspa|f}}
 *: Old Polish: {{t|zlw-opl|ostrów|m}}
