--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -401,6 +401,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Turkmen: {{tt|tk|doňuz}}
 * Tuvan: {{tt|tyv|хаван}}
 * Ubir: {{tt|ubr|foro}}
+* Ubykh: {{t|uby|χˤʷa}}
 * Udi: {{t|udi|боъкъ}}
 * Udmurt: {{tt|udm|парсь}}
 * Ukrainian: {{tt|uk|свиня́|f}}
