--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -207,7 +207,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan|t=to bleed}}, from {{inh|e
 {{en-noun}}
 
 # An incident of bleeding, as in [[haemophilia]].
-# {{lb|en|aviation|usually plural}} A system for tapping hot, high-pressure air from a [[gas turbine]] engine for purposes such as cabin pressurization and airframe anti-icing.
+# {{lb|en|aviation|usually|in the plural}} A system for tapping hot, high-pressure air from a [[gas turbine]] engine for purposes such as cabin pressurization and airframe anti-icing.
 #: {{ux|en|When taking off at high altitude or at near-maximum weight, the '''bleeds''' have to be turned off temporarily, as they decrease engine power somewhat.}}
 # {{senseid|en|narrow edge}} {{lb|en|printing}} A narrow edge around a page layout, to be printed but cut off afterwards (added to allow for slight misalignment, especially with pictures that should run to the edge of the finished sheet).
 # {{lb|en|sound recording}} The situation where sound is picked up by a [[microphone]] from a source other than that which is intended.
