--- a/en/c/consonance.746531.wikitext
+++ b/en/c/consonance.746531.wikitext
@@ -41,3 +41,10 @@ From {{etyl|fro|en}}, from {{etyl|la|en}} {{lena}} {{m|la|consonantia}}
 * [https://web.archive.org/web/20090630180801/http://olc.lcs.on.ca/English/ETS4Ue.Nsf/5f78f7e68f1c4d30852565960008af71/bb7e8c258996458385256d8f00486f1e?OpenDocument Lakefield College School Key Literary Terms]
 
 [[Category:English 3-syllable words]]
+----
+==French==
+
+===Noun===
+{{fr-noun|f}}
+
+# {{l|en|consonance}}
