--- a/en/u/unselfishness.742253.wikitext
+++ b/en/u/unselfishness.742253.wikitext
@@ -16,5 +16,6 @@
 *: Bokmål: {{t+|nb|uselviskhet|m|f}}, {{t|nb|uegennyttighet|m|f}}
 *: Nynorsk: {{t|nn|usjølviskheit|f}}
 {{trans-mid}}
+* Polish: {{t+|pl|bezinteresowność|f}}
 * Swedish: {{t|sv|oegennytta|c}}, {{t+|sv|osjälviskhet|c}}
 {{trans-bottom}}
