--- a/en/s/siphonophore.801198.wikitext
+++ b/en/s/siphonophore.801198.wikitext
@@ -15,6 +15,7 @@ From {{confix|en|siphono|phore}}.
 {{trans-top|hydrozoan of the order Siphonophorae}}
 * Finnish: {{t|fi|uimapolyyppi}}
 {{trans-mid}}
+* Japanese: {{t|ja|管クラゲ|tr=kudakurage}}
 * Spanish: {{t|es|sifonóforo|m}}
 {{trans-bottom}}
 
