--- a/en/b/baling.855676.wikitext
+++ b/en/b/baling.855676.wikitext
@@ -115,7 +115,7 @@ From Riau {{bor|id|ms}}.
 * {{hyph|tl|ba|ling}}
 * {{tl-IPA}}
 
-===Noun===
+====Noun====
 {{tl-noun}}
 
 # [[inclining]] of the [[head]] to one [[side]]
@@ -123,21 +123,21 @@ From Riau {{bor|id|ms}}.
 # [[turning]] of one's [[attention]] to another [[thing]]
 # [[speech]] directed towards [[someone]]
 
-====Derived terms====
+=====Derived terms=====
 {{der3|tl|balingan|bumaling|magbaling|ibaling|pabalingin|pagbaling}}
 
 ===Pronunciation 2===
 * {{hyph|tl|ba|ling}}
 * {{tl-IPA|balíng}}
 
-===Adjective===
+====Adjective====
 {{tl-adj|balíng}}
 
 # {{lb|tl|mathematics|neologism}} [[negative]]
 #: {{syn|tl|negatibo}}
 #: {{ant|tl|tahas|positibo}}
 
-====References====
+===References===
 * {{R:Agham 1969}}
 
 ===Anagrams===
