--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -45,7 +45,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 #* {{quote-book|en|year=1936|author=F.J. Thwaites|authorlink=F.J. Thwaites|title={{w|The Redemption (novel)|The Redemption}}|publisher=H. John Edwards|location=Sydney|year_published=1940|chapter=XXII|page=216|text=A short, rather studious young woman on noticing him moved from behind an '''island''' counter.}}
 # {{lb|en|government}} An [[unincorporated]] area wholly surrounded by one or more incorporated areas.
 # {{lb|en|grammar}} A [[phrase]] from which a [[wh-word]] cannot be [[extract]]ed without yielding invalid grammar.
-#:''Adverbial subordinate clauses are '''island'''s for extraction: "They have a billion dollars of inventory that they don't know where *(it) is".''
+#:''Adverbial subordinate clauses are '''islands''' for extraction: "They have a billion dollars of inventory that they don't know where *(it) is".''
 
 ====Synonyms====
 * {{sense|land surrounded by water}} {{l|en|ait}}, {{l|en|holm}}
@@ -62,7 +62,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 |Norfolk Island|North Island|Puget Island|Rhode Island|Rock Island
 |safety island|security island|Island|sea-island|South Island|Stewart Island|St. Lawrence Island
 |tidal island|traffic island|Valentia Island|Vancouver Island|Wake Island|Wake's Island
-|Wallasea Island|White Island}}
+|Wallasea Island|White Island|wh-island}}
 
 ====Related terms====
 * {{l|en|insular}}
