--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -115,6 +115,7 @@ Cognate with {{cog|stq|Otter}}, {{cog|nl|otter}}, {{cog|de|Otter}}, {{cog|sv|utt
 * Maltese: {{t|mt|lutra|?}}
 * Manchu: {{t|mnc|ᡥᠠᡳᠯᡠᠨ}}
 * Manx: {{t|gv|dooarchoo|m}}, {{t+|gv|moddey ushtey|m}}
+* Maori: {{t|mi|ōtā}}
 * Marathi: {{t|mr|पाणमांजर|?}}
 * Mi'kmaq: {{t|mic|giwnig|an}}
 * Mingrelian: {{t|xmf|წვინარი}}
