--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -58,33 +58,31 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 #*: A bare lamp (bulb, globe, ''''bubble'''') radiates light in all directions.
 
 ====Derived terms====
-{{rel-top3|Terms derived from ''bubble'' (noun)}}
-* {{l|en|antibubble}}
-* {{l|en|bubble and squeak}}
-* {{l|en|bubbly}}
-* {{l|en|bubble bath}}
-* {{l|en|bubble blower}}
-* {{l|en|bubble chamber}}
-* {{l|en|bubble era}}
-{{rel-mid3}}
-* {{l|en|bubble gum}}
-* {{l|en|bubblejet}}
-* {{l|en|bubble romper}}
-* {{l|en|bubble team}}
-* {{l|en|bubble under}}
-* {{l|en|bubble wrap}}
-* {{l|en|burst someone's bubble}}
-{{rel-mid3}}
-* {{l|en|double bubble conjecture}}
-* {{l|en|down bubble}}
-* {{l|en|housing bubble}}
-* {{l|en|land bubble}}
-* {{l|en|on the bubble}}
-* {{l|en|stock bubble}}
-* {{l|en|support bubble}}
-* {{l|en|up bubble}}
-* {{l|en|vacuum bubble}}
-{{rel-bottom}}
+{{der3|en|title=Terms derived from ''bubble'' (noun)}}
+|antibubble
+|bubble and squeak
+|bubbly
+|bubble bath
+|bubble blower
+|bubble chamber
+|bubble era
+|bubble gum
+|bubblejet
+|bubble romper
+|bubble team
+|bubble under
+|bubble wrap
+|burst someone's bubble
+|double bubble conjecture
+|down bubble
+|housing bubble
+|land bubble
+|on the bubble
+|stock bubble
+|support bubble
+|up bubble
+|vacuum bubble
+|air bubble|anger bubble|anti-bubble|bubble ass|bubble baby disease|bubble boy disease|bubble boy syndrome|bubble brain|bubble butt|bubble cake|bubble car|bubble company|bubble level|bubble pack|bubble perm|bubble pipe|bubble position|bubble ring|bubble shell|bubble sort|bubble tap|bubble tea|bubble wand|bubble water|bubble-brained|bubble-gum|bubble-head|bubble-up|bubble-wrap|dot-com bubble|double bubble|double bubble mint|energy bubble|Fermi bubble|flight bubble|hubble bubble|hubble-bubble|information technology bubble|Internet bubble|lawn bubble|soap bubble|speech bubble|thought bubble|warp bubble|Westminster bubble}}
 
 ====Translations====
 {{trans-top|spherically contained volume of air or other gas}}
