--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1062,10 +1062,10 @@ From {{der|xpo|azc-nah-pro|*aatl}}, from {{der|xpo|azc-pro|*pa|*pa-ta}}.
 From {{inh|slr|trk-pro|*at}}.
 
 ====Pronunciation====
-* {{lb|slr|Ucirem(where?)|Ejia|Daowei|Hanbahe|Jiezi|Gaizi|Ashnu|Hualong|Jishi|Mengda|Baizhuang|Xunhua|Qinghai|Ili|Samuyuzi|Yining|Xinjiang}} {{IPA|slr|[ɑtʰ]|[atʰ]|[ɑʰtʰ]}}
+* {{lb|slr|Chahandusi|Ejia|Daowei|Hanbahe|Jiezi|Gaizi|Ashnu|Hualong|Jishi|Mengda|Baizhuang|Xunhua|Qinghai|Ili|Samuyuzi|Yining|Xinjiang}} {{IPA|slr|[ɑtʰ]|[atʰ]|[ɑʰtʰ]}}
 * {{lb|slr|Dazhuang|Mengda|Xunhua|Qinghai}} {{IPA|slr|[ɑdʒ]|[ɑdʒʰ]}}
 * {{lb|slr|Jiezi|Xunhua|Qinghai}} {{IPA|slr|[ɑʒʰ]}}
-* {{lb|slr|Ucirem(where?)|Jiezi|Mengda|Xunhua|Qinghai}} {{IPA|slr|[ɑːtʰ]}}
+* {{lb|slr|Chahandusi|Jiezi|Mengda|Xunhua|Qinghai}} {{IPA|slr|[ɑːtʰ]}}
 
 ====Noun====
 {{head|slr|noun}}
