--- a/en/f/fufu.855764.wikitext
+++ b/en/f/fufu.855764.wikitext
@@ -26,6 +26,18 @@ From West African languages such as [[Ewe]], {{m|ln|fufú||t=white-white}}.
 
 ----
 
+==Bura==
+
+===Noun===
+{{head|bwr|noun}}
+
+# [[lungs]]
+
+===References===
+* Blench, Robert; Bulkaam, Michael (2021) An Introduction to Mantsi, a South Bauchi language of Central Nigeria. University of Cambridge.
+{{c|bwr|Anatomy}}
+----
+
 ==Krio==
 
 ===Etymology===
