--- a/en/j/Japetus.741397.wikitext
+++ b/en/j/Japetus.741397.wikitext
@@ -14,7 +14,7 @@
 {{wikipedia|lang=fi}}
 
 ===Etymology===
-From {{der|fi|la|Iapetus}, from} {{der|fi|grc|Ἰαπετός}}.
+From {{der|fi|la|Iapetus}}, from {{der|fi|grc|Ἰαπετός}}.
 
 ===Pronunciation===
 {{fi-pronunciation}}
