--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -459,7 +459,7 @@ From {{inh|nn|non|hvat}}, from {{inh|nn|gem-pro|*hwat}}.
 #* {{quote-book|vi|author=Nguyễn Du|authorlink=w:Nguyễn Du|title=Truyện Kiều|trans-title=[[w:The Tale of Kieu|The Tale of Kieu]]|year=1820|passage=Trải '''qua''' một cuộc bể dâu / Những điều trông thấy mà đau đớn lòng.|translation=Through the [[whirligig]] of time / There are events which wrench one’s heart}}
 
 ===Etymology 2===
-{{vi-etym-sino|我|hv=n||ngã}}.
+{{vi-etym-sino|我|hv=n||ngã}}; borrowed from a Sinitic variety with denasalization.
 
 ====Pronoun====
 {{vi-pronoun}}
