--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -589,6 +589,8 @@ From {{inh|en|enm|blowe}}, {{m|enm|blaw}}, northern variant of {{m|enm|blewe|blÄ
 #* {{quote-journal|en|date=April 15, 2011|author=Saj Chowdhury|title=Norwich 2 - 1 Nott'm Forest|work=BBC Sport|url=http://news.bbc.co.uk/sport2/hi/football/13009332.stm|passage=Norwich returned to second in the Championship with victory over Nottingham Forest, whose promotion hopes were dealt another '''blow'''.}}
 # {{lb|en|AU|shearing|historical}} A [[cut]] made to a sheep's [[fleece]] by a [[shearer]] using [[hand-shears]].
 #* {{quote-journal|en|date=5 Dec 1891|journal=The Bacchus Marsh Express|place=Victoria|page=7|column=7|text=Click goes his shears; click, click, click. / Wide are the '''blows''', and his hand is moving quick, / The ringer looks round, for he lost it by a '''blow''', / And he curses that old shearer with the bare belled ewe.}}
+# {{lb|en|AU|NZ}} An [[outcrop]] of [[quartz]] from surrounding rock, thought to indicate [[mineral]] [[deposit]]s below.
+#* {{quote-book|1=en|year=1887|author=Harriet W. Daly|title=Digging, Squatting, and Pioneering Life in the Northern Territory of South Australia|page=315|passage="'''Blows'''" of quartz, crop out above the layers of slate, granite, and sandstone formation.}}
 # {{lb|en|television}} {{syn of|en|button||the punchy or suspenseful line of dialogue that concludes a scene}}
 #* '''2014''', Martie Cook, ''Write to TV: Out of Your Head and onto the Screen'' (page 105)
 #*: The '''blow''' is important because it transitions the reader and eventually the audience from one scene to another.
