--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -233,6 +233,9 @@ From {{der|ms|sa|भाषा||language}}.
 * {{desc|bor=1|en|Bahasa}} {{i|with Indonesian {{l|id|bahasa}}}}
 * {{desc|mfa|sc=Arab|بهاس|tr=bahasa}}
 
+===References===
+* {{Cite-book|title=Kosakata Bahasa Sanskerta dalam Bahasa Melayu Masa Kini|author1=Edi Sedyawati |author2=Ellya Iswati|author3=Kusparyati Boedhijono|author4=Dyah Widjajanti D.|publisher=Pusat Pembinaan dan Pengembangan Bahasa. Departemen Pendidikan dan Kebudayaan Republik Indonesia|year=1994|isbn=979-459-416-4|location=Jakarta, Indonesia|page=18}}
+
 ===Further reading===
 * {{R:PRPM}}
 
