--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -417,7 +417,7 @@ Not related to {{ncog|en|but}}.
 ==Latvian==
 
 ===Etymology===
-From {{der|lv|bat-pro|-}} {{m|ine-bsl-pro|*bet}}, from {{der|lv|ine-pro|*be}}, {{m|ine-pro|*bʰe||outside, without}} (whence also {{cog|lv|-}} preposition {{m|lv|bez}}, [[q.v.]]), to which an old particle ''-t'' was added, visible also in the {{cog|lv|-}} particle {{m|lt|it}} and the adverb {{m|lv|šeit||here}} ([[q.v.]]). Cognates include {{cog|lt|bèt}}, {{cog|xsv|bat}}.<ref>{{R:lv:LEV}}</ref>
+From {{der|lv|bat-pro|-}} {{m|ine-bsl-pro|*bet}}, from {{der|lv|ine-pro|*be}}, {{m|ine-pro|*bʰe||outside, without}} (whence also the {{cog|lv|-}} preposition {{m|lv|bez}}), to which an old particle ''-t'' was added, visible also in the {{cog|lv|-}} particle {{m|lt|it}} and the adverb {{m|lv|šeit||here}}. Cognates include {{cog|lt|bèt}}, {{cog|xsv|bat}}.<ref>{{R:lv:LEV}}</ref>
 
 ===Pronunciation===
 * {{lv-IPA|bɛt}}
