--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -29,7 +29,7 @@ The name given to [[Jacob]] in the [[Bible]] ({{RQ:Tanach|1|32|29}}), said to be
 
 ====Derived terms====
 * {{l|he|אֶרֶץ יִשְׂרָאֵל}}
-* {{l|he|חלב ישראל|tr=chaláv yisraél}}
+* {{l|he|חלב ישראל|tr=khaláv yisraél}}
 * {{l|he|יִשְׂרְאֵלִי}}
 * {{l|he|יִשְׂרְאֵלִיּוּת|tr=yisraeliyút||[[Israeliness]]}}
 * {{l|he|עַם יִשְׂרָאֵל}}
